# esp32_demo

./: .clang-format  .gitignore  CMakeLists.txt  glm_demo.py  partitions.csv  sdkconfig.ci  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  hello_world_main.c
main/app/: app_camera.c  app_camera.h  app_glm.c  app_glm.h  app_led.c  app_led.h  app_lvgl.c  app_lvgl.h  app_wifi.c  app_wifi.h  gui_lvgl.c  gui_lvgl.h
main/custom_jwt/: base64url.c  base64url.h  custom_jwt.c  custom_jwt.h  sha256-internal.c  sha256.c  sha256.h  sha256_i.h
main/hardware/: bsp_i2s.c  bsp_i2s.h
main/utils/: file_manager.c  file_manager.h  play_audio.c  play_audio.h  speech_recsrc.c  speech_wakeup.c  speech_wakeup.h  utils.c  utils.h
scripts/: subscriber.py
