idf_component_register(SRCS "hello_world_main.c"
                            "app/app_led.c"
                            "app/app_wifi.c"
                            "app/app_camera.c"
                            "app/app_lvgl.c"
                            "app/app_glm.c"
                            "app/gui_lvgl.c"
                            "custom_jwt/custom_jwt.c"
                            "custom_jwt/base64url.c"
                            "utils/utils.c"
                            "utils/speech_wakeup.c"
                            "hardware/bsp_i2s.c"
                            "utils/play_audio.c"
                            "utils/file_manager.c"
                    INCLUDE_DIRS "")